<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linear_layout1"
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_view1"
                    android:layout_width="50dp"
                    android:tint="@color/white"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/circle"
                    android:src="@drawable/img_register"
                    android:padding="10dp"

                    android:layout_height="50dp"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:text="@string/register"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:fontFamily="sans-serif"/>


            </LinearLayout>
            
            <ImageView
                android:id="@+id/image_view2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="-10dp"
                android:rotation="45"
                android:layout_below="@id/linear_layout1"
                android:layout_centerHorizontal="true"
                android:src="@drawable/square"
                android:contentDescription="@string/todo" />

            <RelativeLayout
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:id="@+id/relative_layout1"
                android:layout_marginTop="20dp"
                android:layout_below="@id/image_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_view_user_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/img_user"
                    android:tint="@color/white"
                    android:contentDescription="@string/todo" />

                <EditText
                    android:id="@+id/input_name"
                    android:fontFamily="sans-serif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:paddingLeft="20dp"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:layout_alignBottom="@id/image_view_user_icon"
                    android:layout_toEndOf="@id/image_view_user_icon"
                    android:layout_alignParentTop="true"
                    android:layout_alignBaseline="@id/image_view_user_icon"
                    android:background="@color/edit_text_bg"
                    android:importantForAutofill="no" />

            </RelativeLayout>



            <RelativeLayout
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:id="@+id/relative_layout2"
                android:layout_marginTop="10dp"
                android:layout_below="@id/relative_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_view_email"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/img_email"
                    android:tint="@color/white"
                    android:contentDescription="@string/todo" />

                <EditText
                    android:id="@+id/input_email_sign_up"
                    android:fontFamily="sans-serif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:paddingStart="20dp"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp"
                    android:layout_alignBottom="@id/image_view_email"
                    android:layout_toEndOf="@id/image_view_email"
                    android:layout_alignParentTop="true"
                    android:layout_alignBaseline="@id/image_view_email"
                    android:background="@color/edit_text_bg"
                    android:autofillHints="no" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
            android:id="@+id/relative_layout3"
            android:layout_marginTop="10dp"
            android:layout_below="@id/relative_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_view_password"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:src="@drawable/img_authentication"
                android:tint="@color/white"
                android:contentDescription="TODO" />

            <EditText
                android:id="@+id/password_sign_up"
                android:fontFamily="sans-serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:paddingStart="20dp"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:layout_alignBottom="@id/image_view_password"
                android:layout_toEndOf="@id/image_view_password"
                android:layout_alignParentTop="true"
                android:layout_alignBaseline="@id/image_view_password"
                android:background="@color/edit_text_bg"
                android:importantForAutofill="no" />

        </RelativeLayout>

            <RelativeLayout
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:id="@+id/relative_layout4"
                android:layout_marginTop="10dp"
                android:layout_below="@id/relative_layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_view_retype_password"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/img_authentication"
                    android:tint="@color/white"
                    android:contentDescription="@string/todo" />

                <EditText
                    android:id="@+id/confirm_password"
                    android:fontFamily="sans-serif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/re_type_password"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:textSize="15sp"
                    android:layout_alignBottom="@id/image_view_retype_password"
                    android:layout_toEndOf="@id/image_view_retype_password"
                    android:layout_alignParentTop="true"
                    android:layout_alignBaseline="@id/image_view_retype_password"
                    android:background="@color/edit_text_bg"
                    android:importantForAutofill="no" />

            </RelativeLayout>


            <CheckBox
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/i_agree_to_the_term_of_condition"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                android:layout_below="@id/relative_layout4"/>



            <Button
                android:id="@+id/register"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkbox"/>

            <ProgressBar
                android:id="@+id/progressbar_sign_up"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_centerInParent="true"
                android:layout_below="@id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_sign_in_here"
                android:textColor="@color/text_color"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:layout_below="@+id/register"
    android:text="@string/already_have_an_account_login_here"
    android:textAllCaps="false"/>


    </RelativeLayout>

    </android.support.v7.widget.CardView>



    </RelativeLayout>