<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linear_layout1"
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_view1"
                    android:layout_width="50dp"
                    android:tint="@color/white"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/circle"
                    android:src="@drawable/img_authentication"
                    android:padding="10dp"

                    android:layout_height="50dp"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:text="@string/log_in"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:fontFamily="sans-serif"/>
            </LinearLayout>


            <ImageView
                android:id="@+id/image_view2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="-10dp"
                android:rotation="45"
                android:layout_below="@id/linear_layout1"
                android:layout_centerHorizontal="true"
                android:src="@drawable/square"
                android:contentDescription="@string/todo" />

            <RelativeLayout
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:id="@+id/relative_layout1"
                android:layout_marginTop="20dp"
                android:layout_below="@id/image_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_view_user_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/img_email"
                    android:tint="@color/white"
                    android:contentDescription="@string/todo" />

                <EditText
                    android:id="@+id/input_email_sign_in"
                    android:fontFamily="sans-serif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_email"
                    android:paddingLeft="20dp"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp"
                    android:layout_alignBottom="@id/image_view_user_icon"
                    android:layout_toEndOf="@id/image_view_user_icon"
                    android:layout_alignParentTop="true"
                    android:layout_alignBaseline="@id/image_view_user_icon"
                    android:background="@color/edit_text_bg"
                    android:importantForAutofill="no" />

            </RelativeLayout>



            <RelativeLayout
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:id="@+id/relative_layout2"
                android:layout_marginTop="10dp"
                android:layout_below="@id/relative_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_view_email"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/img_authentication"
                    android:tint="@color/white"
                    android:contentDescription="@string/todo" />

                <EditText
                    android:id="@+id/input_password_sign_in"
                    android:fontFamily="sans-serif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_password"
                    android:paddingStart="20dp"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp"
                    android:layout_alignBottom="@id/image_view_email"
                    android:layout_toEndOf="@id/image_view_email"
                    android:layout_alignParentTop="true"
                    android:layout_alignBaseline="@id/image_view_email"
                    android:background="@color/edit_text_bg"
                    android:autofillHints="no" />

            </RelativeLayout>

            <Button
                android:id="@+id/button_sign_in"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_below="@id/relative_layout2"/>

            <ProgressBar
                android:id="@+id/progressbar_sign_in"
                android:visibility="gone"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:layout_centerInParent="true"
                android:layout_below="@id/relative_layout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_forgot_password"
                android:textColor="@color/colorPrimary"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:layout_below="@+id/button_sign_in"
                android:text="@string/forgot_password"
                android:textSize="16dp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/button_sign_up_here"
                android:textColor="@color/text_color"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:layout_below="@+id/button_forgot_password"
                android:text="@string/dont_have_account"
                android:textAllCaps="false"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>